CollegeCanteen/build_log_final_4.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
warning: [options] source value 8 is obsolete and will be removed in a future release
warning: [options] target value 8 is obsolete and will be removed in a future release
warning: [options] To suppress warnings about obsolete options, use -Xlint:-options.
C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\models\OtpVerificationRequest.java:3: error: class, interface, or enum expected
    public Long userId;
           ^
C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\models\OtpVerificationRequest.java:4: error: class, interface, or enum expected
    public String otp;
           ^
C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\models\OtpVerificationRequest.java:6: error: class, interface, or enum expected
    public OtpVerificationRequest(Long userId, String otp) {
           ^
C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\models\OtpVerificationRequest.java:8: error: class, interface, or enum expected
        this.otp = otp;
        ^
C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\models\OtpVerificationRequest.java:9: error: class, interface, or enum expected
    }
    ^
5 errors
3 warnings

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.10/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 3s
14 actionable tasks: 1 executed, 13 up-to-date
